# Catalog-To-Xpublish

./: .gitignore  .pre-commit-config.yaml  DEV_NOTES.md  README.md  codecov.yml  demo_environment.yml  dev_environment.yml  environment.yml  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
examples/: demo.ipynb  run_server.py
examples/notebooks/: opendap_url_testing.ipynb
notebooks/: OPeNDAP_server_side.ipynb  OPeNDAP_testing_client_side.ipynb  Xpublish_server_side.ipynb  data_catalogs_client_side.ipynb  data_catalogs_server_side.ipynb  intake_catalog_testing.ipynb  intake_to_stac.ipynb
notebooks/.ipynb_checkpoints/: intake_catalog_testing-checkpoint.ipynb
resources/: README.md
resources/Planet_Labs_STAC_tutorials/: Introduction to STAC Part 1_ An Overview of the Specification.html  Introduction to STAC Part 2_ Creating an Example STAC Catalog of Planet Imagery with PySTAC.html
resources/Planet_Labs_STAC_tutorials/Introduction to STAC Part 1_ An Overview of the Specification_files/: analytics.js(1).download  analytics.min.js.download  css  icon  otSDKStub.js.download  redoc.js.download  search.js.download
resources/Planet_Labs_STAC_tutorials/Introduction to STAC Part 2_ Creating an Example STAC Catalog of Planet Imagery with PySTAC_files/: dc-redoc.min.css  dc-style.min.css  fonts.css  js  otBannerSdk.js.download  plpbcpp.js.download  saved_resource.html  tipuesearch_content.js.download  toc.js.download
src/catalog_to_xpublish/: __init__.py  factory.py  log.py  provider_plugin.py  run_server.py  server_functions.py
src/catalog_to_xpublish/base/: __init__.py  io_base.py  router_base.py
src/catalog_to_xpublish/io/: __init__.py  intake_io.py  stac_io.py
src/catalog_to_xpublish/routers/: __init__.py  intake_router.py  stac_router.py
src/catalog_to_xpublish/searchers/: __init__.py  intake_search.py  stac_search.py
src/xpublish_opendap_server/: __init__.py  custom_plugins.py  factory.py  intake_router.py  intake_server.py  io_functions.py  main.py  provider_plugin.py  run_server.py  shared.py  stac_router.py
src/xpublish_opendap_server/base/: router_base.py  searcher_base.py
src/xpublish_opendap_server/catalog_classes/: __init__.py  base.py  intake_catalog.py  intake_catalog_search.py  stac_catalog_search.py
src/xpublish_opendap_server/catalog_search/: __init__.py  base.py  intake_catalog_search.py  intake_search.py  provider_plugin.py  stac_catalog_search.py  stac_search.py
src/xpublish_opendap_server/io/: __init__.py  intake_io.py  stac_io.py
src/xpublish_opendap_server/io_classes/: __init__.py  base.py  intake_io.py  stac_io.py
src/xpublish_opendap_server/routers/: __init__.py  base.py  intake_router.py  stac_router.py
src/xpublish_opendap_server/searchers/: intake_search.py  stac_search.py
test_catalogs/: flat_full_intake_zarr_catalog.yaml  intake_zarr_catalog_osn.yaml  intake_zarr_catalog_s3.yaml  nested_full_intake_zarr_catalog.yaml  test_intake_zarr_catalog.yaml  test_stac_zarr_catalog.json
test_catalogs/sample_stac_catalog/: catalog.json
test_catalogs/sample_stac_catalog/GDP_catalog/: catalog.json
test_catalogs/sample_stac_catalog/conus-404/: collection.json
test_catalogs/sample_stac_catalog/conus404-daily/: collection.json
test_catalogs/sample_stac_catalog/sub-catalog/: catalog.json
testing/: test_1_intake_catalog.py  test_2_intake_router.py
tests/: test_0_osn_temporary.py  test_1_intake_catalog.py  test_1_intake_catalog_setup.py  test_2_stac_catalog.py  test_2_stac_catalog_setup.py  test_3_read_from_intake.py  test_3_run_intake_server.py  test_4_read_from_stac.py  test_4_run_stac_server.py  test_5_run_intake_server.py  test_6_run_stac_server.py
(+6 files in other folders)
